# fcpp-exercises

./: .gitignore  CMakeLists.txt  README.md
run/: exercises.cpp
